== Changelog
=== 3.2 (in progress)
* Fixed Bug in showing Selenium WebDriver version
=== 3.1.3 (Released 22.01.2016)
* Upgraded to selenium-java 2.49.1 (fixed timeout issue in Grid)
* Added INFO about Selenide and Selenium WebDriver Versions in use

=== 3.1.2 (Released 19.01.2016)
* value-Condition checked for substring contaning again (in 3.1-3.1.1 - was exact match)

=== 3.1.1 (Released 18.01.2016)
* Renamed FAILED->FAIL, PASSED->PASS in the print/log output to avoid confusion with PASSED and FAILED of external tools
* Added INFO about Browser/Version/Plattform for the started browser to the logs

* exclude old selenium-remote-driver and selenium-java transitive dependencies (coming from phantomjsdriver 1.2.1)

=== 3.1 (Released 17.01.2016)
* Update documentation
* #263 Now Selenide does **not** allow to download file via invisible link
* #206 Method `switchTo(alert())` now waits until alert appears
* #206 Method `switchTo(frame())` now waits until frame appears
* #271 Method `switchTo(window())` now waits until window/tab appears
* Added methods `byName`, `byXpath`, `byLinkText`, `byPartialLinkText`,`byId` for Selectors duplicating Selenium `By.*` methods
* Bugfix: `Condition.exactTextCaseSensitive` now fails searchText is only a substring.
* Deprecated `$(WebElement,...) $$(WebElement,..)` - use ``$(WebElement).$(...) instead
* Added `getValue` method for SelenideElement (the same as `val()`)
* Upgraded to selenium-java 2.49.0, changelog: https://github.com/SeleniumHQ/selenium/blob/master/java/CHANGELOG

=== 3.0 (Released 24.12.2015)
===== New functions:
* Add method Selenide.updateHash() (thanks to @fabienbancharel for pull request #254)
* upgrade to sizzle 2.2.1
* upgrade to guava 19.0
* upgrade to testng 6.9.10

===== Big refactoring:
* Refactor AbstractSelenideElement. Instead of single huge class, it's split to many small classes ("commands").
* User can override any of these commands
* User can add any custom commands to the standard Selenide methods
